--- a/UI/MvuxHowTos/PaginationPeopleApp/PaginationPeopleApp/MainPage.xaml
+++ b/UI/MvuxHowTos/PaginationPeopleApp/PaginationPeopleApp/MainPage.xaml
@@ -3,22 +3,50 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:sys="using:System"
+    xmlns:local="using:PaginationPeopleApp"
     xmlns:mvux="using:Uno.Extensions.Reactive.UI">
 
-    <ListView ItemsSource="{Binding People}" CanBeScrollAnchor="True">
-        <ListView.ItemTemplate>
-            <DataTemplate>
-                <StackPanel Orientation="Horizontal" Spacing="2">
-                    <TextBlock Text="{Binding FirstName}"/>
-                    <TextBlock Text="{Binding LastName}"/>
-                </StackPanel>
-            </DataTemplate>
-        </ListView.ItemTemplate>
-        <ListView.Footer>
-            <StackPanel Orientation="Horizontal">
-                <Button Content="Previous" Command="{Binding MovePage}" CommandParameter="-1" />
-                <Button Content="Next" Command="{Binding MovePage}" CommandParameter="1" />
+    <Page.Resources>
+        <DataTemplate x:Key="PersonDataTemplate" x:DataType="local:Person">
+            <StackPanel Orientation="Horizontal" Spacing="2">
+                <TextBlock Text="{x:Bind FirstName}"/>
+                <TextBlock Text="{x:Bind LastName}"/>
             </StackPanel>
-        </ListView.Footer>
-    </ListView>
+        </DataTemplate>
+    </Page.Resources>
+
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+
+        <!--Example one - automatically loading on scroll -->
+        <ListView x:Name="autom" ItemsSource="{Binding PeopleAuto}" ItemTemplate="{StaticResource PersonDataTemplate}"
+                  DataFetchSize="20" Header="Next page auto-loading when on available capacity or scrolled"/>
+
+        <Border Grid.Column="1" Width="3" Background="DarkGray" />
+
+        <!--Example two - manual loading on demand -->
+        <ListView Grid.Column="2" x:Name="manual" ItemsSource="{Binding PeopleManual}"
+                  ItemTemplate="{StaticResource PersonDataTemplate}" Header="Load single page on demand">
+            
+            <ListView.Footer>
+                <StackPanel Orientation="Horizontal" Spacing="3">
+                    <Button Content="Previous" Command="{Binding Move}" VerticalAlignment="Center">
+                        <Button.CommandParameter>
+                            <x:Int32>-1</x:Int32>
+                        </Button.CommandParameter>
+                    </Button>
+                    <TextBlock Text="{Binding CurrentPage}" VerticalAlignment="Center" />
+                    <Button Content="Next" Command="{Binding Move}" VerticalAlignment="Center">
+                        <Button.CommandParameter>
+                            <x:Int32>1</x:Int32>
+                        </Button.CommandParameter>
+                    </Button>
+                </StackPanel>
+            </ListView.Footer>
+        </ListView>
+    </Grid>
 </Page>
