--- a/UI/Navigation/src/Navigation/Presentation/BreadcrumbNavigation/BreadcrumbControl.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/BreadcrumbNavigation/BreadcrumbControl.xaml
@@ -1,26 +1,31 @@
 ﻿<UserControl x:Class="Navigation.Presentation.BreadcrumbControl"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:uen="using:Uno.Extensions.Navigation.UI"
-             xmlns:utu="using:Uno.Toolkit.UI"
-             xmlns:local="using:Navigation.Presentation">
+			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			 xmlns:local="using:Navigation.Presentation"
+			 xmlns:uen="using:Uno.Extensions.Navigation.UI"
+			 xmlns:utu="using:Uno.Toolkit.UI">
 
-    <StackPanel Orientation="Horizontal">
-        <ItemsControl ItemsSource="{Binding Breadcrumbs}">
-            <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
-                        <Button Content="{Binding}"
-                                Style="{StaticResource TextButtonStyle}"
-                                Margin="0,0,5,0"
-                                CommandParameter="{Binding}"
-                                Command="{utu:ItemsControlBinding Path=DataContext.NavigateBreadcrumbCommand}" />
-                        <!--CommandParameter="{Binding}"/>-->
-                        <TextBlock Text=">"
-                                   Margin="0,0,5,0" />
-                    </StackPanel>
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-        </ItemsControl>
-    </StackPanel>
+	<StackPanel Orientation="Horizontal">
+		<ItemsControl ItemsSource="{Binding Breadcrumbs}">
+			<ItemsControl.ItemsPanel>
+				<ItemsPanelTemplate>
+					<StackPanel Orientation="Horizontal" />
+				</ItemsPanelTemplate>
+			</ItemsControl.ItemsPanel>
+			<ItemsControl.ItemTemplate>
+				<DataTemplate>
+					<StackPanel Orientation="Horizontal">
+						<Button Margin="0,0,5,0"
+								Command="{utu:ItemsControlBinding Path=DataContext.NavigateBreadcrumbCommand}"
+								CommandParameter="{Binding}"
+								Content="{Binding}"
+								Style="{StaticResource TextButtonStyle}" />
+						<TextBlock Margin="0,0,5,0"
+								   VerticalAlignment="Center"
+								   Text="&gt;" />
+					</StackPanel>
+				</DataTemplate>
+			</ItemsControl.ItemTemplate>
+		</ItemsControl>
+	</StackPanel>
 </UserControl>
