--- a/UI/Navigation/src/Navigation/Presentation/BreadcrumbNavigation/BreadcrumbNavigation.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/BreadcrumbNavigation/BreadcrumbNavigation.xaml
@@ -1,36 +1,35 @@
 ﻿<Page x:Class="Navigation.Presentation.BreadcrumbNavigation"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="using:Navigation.Presentation"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:uen="using:Uno.Extensions.Navigation.UI"
-      xmlns:utu="using:Uno.Toolkit.UI"
-      Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-      mc:Ignorable="d">
+	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	  xmlns:local="using:Navigation.Presentation"
+	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	  xmlns:uen="using:Uno.Extensions.Navigation.UI"
+	  xmlns:utu="using:Uno.Toolkit.UI"
+	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+	  mc:Ignorable="d">
 
-    <Grid utu:SafeArea.Insets="VisibleBounds">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition />
-        </Grid.RowDefinitions>
-        <utu:NavigationBar Content="Page Navigation" />
+	<Grid utu:SafeArea.Insets="VisibleBounds">
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto" />
+			<RowDefinition />
+		</Grid.RowDefinitions>
+		<utu:NavigationBar Content="Page Navigation" />
 
-        <StackPanel Grid.Row="1"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Spacing="16">
-            <Image Width="150"
-                   Height="150"
-                   Margin="12"
-                   HorizontalAlignment="Center"
-                   Source="ms-appx:///Assets/logo.png" />
+		<StackPanel Grid.Row="1"
+					HorizontalAlignment="Center"
+					VerticalAlignment="Center"
+					Spacing="16">
+			<Image Width="150"
+				   Height="150"
+				   Margin="12"
+				   HorizontalAlignment="Center"
+				   Source="ms-appx:///Assets/logo.png" />
 
-            <local:BreadcrumbControl />
+			<local:BreadcrumbControl HorizontalAlignment="Stretch" />
 
-            <Button Command="{Binding NavigateToFirstCommand}"
-                    Content="Navigate to First Page" />
+			<Button Command="{Binding NavigateToFirstCommand}" Content="Navigate to First Page" />
 
-        </StackPanel>
-    </Grid>
+		</StackPanel>
+	</Grid>
 </Page>
