--- a/UI/Navigation/src/Navigation/Presentation/BreadcrumbNavigation/ThirdBreadcrumbPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/BreadcrumbNavigation/ThirdBreadcrumbPage.xaml
@@ -1,31 +1,46 @@
 ﻿<Page x:Class="Navigation.Presentation.ThirdBreadcrumbPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="using:Navigation.Presentation"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:uen="using:Uno.Extensions.Navigation.UI"
-      xmlns:utu="using:Uno.Toolkit.UI"
-      Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-      mc:Ignorable="d">
+	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	  xmlns:local="using:Navigation.Presentation"
+	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	  xmlns:uen="using:Uno.Extensions.Navigation.UI"
+	  xmlns:utu="using:Uno.Toolkit.UI"
+	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+	  mc:Ignorable="d">
 
-    <Grid utu:SafeArea.Insets="VisibleBounds">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition />
-        </Grid.RowDefinitions>
-        <utu:NavigationBar Content="Page Navigation" />
+	<Grid utu:SafeArea.Insets="VisibleBounds">
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto" />
+			<RowDefinition />
+		</Grid.RowDefinitions>
+		<utu:NavigationBar Content="Third Page">
+			<utu:NavigationBar.MainCommand>
+				<AppBarButton>
+					<AppBarButton.Icon>
+						<BitmapIcon UriSource="ms-appx:///Assets/Images/back.png" />
+					</AppBarButton.Icon>
+				</AppBarButton>
+			</utu:NavigationBar.MainCommand>
+		</utu:NavigationBar>
 
-        <StackPanel Grid.Row="1"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Spacing="16">
-            <local:BreadcrumbControl />
-            <Button uen:Navigation.Request="-"
-                    Content="Go Back" />
-            <Button Command="{Binding GoBackCommand}"
-                    Content="Go Back with VM" />
+		<StackPanel Grid.Row="1"
+					HorizontalAlignment="Center"
+					VerticalAlignment="Center"
+					Spacing="16">
 
-        </StackPanel>
-    </Grid>
+			<Image Width="150"
+				   Height="150"
+				   Margin="12"
+				   HorizontalAlignment="Center"
+				   Source="ms-appx:///Assets/logo.png" />
+
+			<local:BreadcrumbControl HorizontalAlignment="Stretch" />
+
+			<Button HorizontalAlignment="Center"
+					uen:Navigation.Request="-"
+					Content="Go Back" />
+
+		</StackPanel>
+	</Grid>
 </Page>
