--- a/UI/Navigation/src/Navigation/Presentation/BreadcrumbNavigation/BreadcrumbControl.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/BreadcrumbNavigation/BreadcrumbControl.xaml
@@ -1,31 +1,47 @@
 ﻿<UserControl x:Class="Navigation.Presentation.BreadcrumbControl"
-			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-			 xmlns:local="using:Navigation.Presentation"
-			 xmlns:uen="using:Uno.Extensions.Navigation.UI"
-			 xmlns:utu="using:Uno.Toolkit.UI">
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="using:Navigation.Presentation"
+             xmlns:uen="using:Uno.Extensions.Navigation.UI"
+             xmlns:utu="using:Uno.Toolkit.UI">
 
-	<StackPanel Orientation="Horizontal">
-		<ItemsControl ItemsSource="{Binding Breadcrumbs}">
-			<ItemsControl.ItemsPanel>
-				<ItemsPanelTemplate>
-					<StackPanel Orientation="Horizontal" />
-				</ItemsPanelTemplate>
-			</ItemsControl.ItemsPanel>
-			<ItemsControl.ItemTemplate>
-				<DataTemplate>
-					<StackPanel Orientation="Horizontal">
-						<Button Margin="0,0,5,0"
-								Command="{utu:ItemsControlBinding Path=DataContext.NavigateBreadcrumbCommand}"
-								CommandParameter="{Binding}"
-								Content="{Binding}"
-								Style="{StaticResource TextButtonStyle}" />
-						<TextBlock Margin="0,0,5,0"
-								   VerticalAlignment="Center"
-								   Text="&gt;" />
-					</StackPanel>
-				</DataTemplate>
-			</ItemsControl.ItemTemplate>
-		</ItemsControl>
-	</StackPanel>
+    <UserControl.Resources>
+        <local:BreadcrumbTemplateSelector x:Key="BreadcrumbTemplateSelector">
+            <local:BreadcrumbTemplateSelector.DefaultTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <Button Margin="0,0,5,0"
+                                Command="{utu:ItemsControlBinding Path=DataContext.NavigateBreadcrumbCommand}"
+                                CommandParameter="{Binding}"
+                                Content="{Binding}"
+                                Style="{StaticResource TextButtonStyle}" />
+                        <TextBlock Margin="0,0,5,0"
+                                   VerticalAlignment="Center"
+                                   Text="&gt;" />
+                    </StackPanel>
+                </DataTemplate>
+            </local:BreadcrumbTemplateSelector.DefaultTemplate>
+            <local:BreadcrumbTemplateSelector.LastItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <Button Margin="0,0,5,0"
+                                Content="{Binding}"
+                                Style="{StaticResource TextButtonStyle}"
+                                IsEnabled="False" />
+                    </StackPanel>
+                </DataTemplate>
+            </local:BreadcrumbTemplateSelector.LastItemTemplate>
+        </local:BreadcrumbTemplateSelector>
+    </UserControl.Resources>
+
+    <StackPanel Orientation="Horizontal">
+        <ItemsControl ItemsSource="{Binding Breadcrumbs}"
+                      ItemTemplateSelector="{StaticResource BreadcrumbTemplateSelector}">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel Orientation="Horizontal" />
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+        </ItemsControl>
+    </StackPanel>
 </UserControl>
