--- a/UI/Navigation/src/Navigation/Presentation/BreadcrumbNavigation/FirstBreadcrumbPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/BreadcrumbNavigation/FirstBreadcrumbPage.xaml
@@ -40,7 +40,7 @@
 			<StackPanel HorizontalAlignment="Center"
 						Orientation="Horizontal"
 						Spacing="8">
-				<Button uen:Navigation.Request="SecondBreadcrumb" Content="Second Page" />
+				<Button uen:Navigation.Request="SecondBreadcrumb" Content="Navigate to Second Page" />
 				<Button uen:Navigation.Request="-" Content="Go Back" />
 			</StackPanel>
 		</StackPanel>
